@@ -2,7 +2,7 @@ import pygame as pg
 import game, upgrade, listClass, menu, currency
 
 class button:
-    def __init__(self, textList, activeMenuList: list, textColor, xPos, yPos, buttonFunctionality: list, drawConditions: list = None):
+    def __init__(self, textList, activeMenuList: list, textColor, xPos, yPos, buttonFunctionality: list, drawConditions: list = None, updateTextList: list = None):
         pg.font.init()
         self.font = pg.font.Font("arial.ttf", 30)
         self.lineVarList = []
@@ -13,6 +13,7 @@ class button:
         buttonList.list += [self]
         self.drawConditions = drawConditions
         self.buttonFunctionality = buttonFunctionality
+        self.updateTextList = updateTextList
 
     def setButton(self, textList: list, textColor):
         self.textColor = textColor
@@ -51,7 +52,27 @@ class button:
     
     def updateText(self, text: str, line: int):
         self.lineVarList[line] = self.font.render(text, True, self.textColor)
-    
+
+    def checkUpdateText(self):
+        if self.updateTextList == None:
+            return None
+        else:
+            for listElement in self.updateTextList:
+                strVar = ""
+                for element in listElement:
+                    if type(element) == int:
+                        self.updateText(strVar, element)
+                    else:
+                        for i in element:
+                            if type(i) == list:
+                                upgradeVar = i[0]
+                                if i[1] == "increaseGenPerSecondAmount":
+                                    strVar += str(upgradeVar.increaseGenPerSecondAmount)
+                                elif i[1] == "cost":
+                                    strVar += str(upgradeVar.cost)
+                            else:
+                                strVar += i
+
     def showButton(self):
         for menuVar in self.activeMenu:
             if menuVar == menu.menuVar.currentMenu:
@@ -95,8 +116,8 @@ genButton = button(["Click to gen"], ["defaultMenu"], (255, 255, 255), 150, 100,
 shopButton = button(["Shop"], ["defaultMenu"], (255, 255, 255), 150, 150, ["changeMenu", "shop"], [upgrade.bigBangUpgrade, "level", ">", 0])
 shopBackButton = button(["Back"], ["shop"], (255, 255, 255), 150, 150, ["changeMenu", "default"])
 bigBangButton = button(["Start Big Bang", str(upgrade.bigBangUpgrade.cost) + " Energy"], ["defaultMenu"], (255, 255, 255), 150, 150, ["buyUpdrade", upgrade.bigBangUpgrade], [upgrade.bigBangUpgrade, "level", "=", 0])
-genEnergyUpgradeButton = button(["Upgrade 1", "Auto gen +" + str(upgrade.genEnergyUpgrade.increaseGenPerSecondAmount) + " energy per second per upgrade", str(upgrade.genEnergyUpgrade.cost) + " Matter"], ["shop"], (255, 255, 255), 150, 230, ["buyUpdrade", upgrade.genEnergyUpgrade])
-matterGenUpgradeButton = button(["Double Matter Generation", "Increases energy consumption by +10", str(upgrade.matterGenUpgrade.cost) + " Matter"], ["shop"], (255, 255, 255), 150, 350, ["buyUpdrade", upgrade.matterGenUpgrade])
+genEnergyUpgradeButton = button(["Upgrade 1", "Auto gen +" + str(upgrade.genEnergyUpgrade.increaseGenPerSecondAmount) + " energy per second per upgrade", str(upgrade.genEnergyUpgrade.cost) + " Matter"], ["shop"], (255, 255, 255), 150, 230, ["buyUpdrade", upgrade.genEnergyUpgrade], None, [[["Auto gen +", [upgrade.genEnergyUpgrade, "increaseGenPerSecondAmount"], " energy per second per upgrade"], 1], [[[upgrade.genEnergyUpgrade, "cost"], " Matter"], 2]])
+matterGenUpgradeButton = button(["Double Matter Generation", "Increases energy consumption by +10", str(upgrade.matterGenUpgrade.cost) + " Matter"], ["shop"], (255, 255, 255), 150, 350, ["buyUpdrade", upgrade.matterGenUpgrade], None, [[[[upgrade.matterGenUpgrade, "cost"], " Matter"], 2]])
 genEnergyUpgradeBuffButton = button(["Double Energy Generation of Upgrade 1", str(upgrade.genEnergyUpgradeBuff.cost) + " Matter"], ["shop"], (255, 255, 255), 150, 470, ["buyUpdrade", upgrade.genEnergyUpgradeBuff])
 cheatsMenuButton = button(["Open Cheats Menu"], ["defaultMenu"], (255, 255, 255), 100, 300, ["changeMenu", "cheats"])
 cheatsBackButton = button(["Go Back"], ["cheats"], (255, 255, 255), 100, 300, ["changeMenu", "default"])
